Make subclasses of DBAccess more consistent.