@@ -7,15 +7,15 @@ package dbAccess;
  * @version 2.0
  */
 class DerbyCreateAccess extends DBAccess {
-    private static final String URLdb = "jdbc:derby:catshop.db;create=true";
+    private static final String URL = "jdbc:derby:catshop.db;create=true";
     private static final String DRIVER = "org.apache.derby.jdbc.EmbeddedDriver";
 
     public void loadDriver() throws Exception {
-        Class.forName(DRIVER).newInstance();
+        Class.forName(DRIVER).getDeclaredConstructor().newInstance();
     }
 
     public String urlOfDatabase() {
-        return URLdb;
+        return URL;
     }
 }
 
