@@ -6,11 +6,14 @@ package dbAccess;
  * @version 2.0
  */
 class LinuxAccess extends DBAccess {
+    private static final String URL = "jdbc:mysql://localhost/cshop?user=root";
+    private static final String DRIVER = "org.gjt.mm.mysql.Driver";
+
     public void loadDriver() throws Exception {
-        Class.forName("org.gjt.mm.mysql.Driver").newInstance();
+        Class.forName(DRIVER).getDeclaredConstructor().newInstance();
     }
 
     public String urlOfDatabase() {
-        return "jdbc:mysql://localhost/cshop?user=root";
+        return URL;
     }
 }
